--- a/engines/contacts/app/views/samurai/contacts/contacts/show.html.erb
+++ b/engines/contacts/app/views/samurai/contacts/contacts/show.html.erb
@@ -20,5 +20,5 @@
 </div>
 </div>
 <hr>
-<%= link_to 'Edit', samurai.edit_contact_path(@contact), class: "btn btn-primary" %>
-<%= link_to 'Back', samurai.contacts_path, class: 'btn btn-default' %>
+<%= link_to 'Edit', contacts.edit_contact_path(@contact), class: "btn btn-primary" %>
+<%= link_to 'Back', contacts.contacts_path, class: 'btn btn-default' %>
