--- a/engines/contacts/app/views/samurai/contacts/overrides/_contacts_list.html.erb
+++ b/engines/contacts/app/views/samurai/contacts/overrides/_contacts_list.html.erb
@@ -22,7 +22,7 @@
 			</tbody>
 		</table>
 		<div class="panel-body text-center">
-			<%= link_to '...', contacts_path %>
+			<%= link_to '...', contacts.contacts_path %>
 		</div>
 	</div>
 </div>
