--- a/engines/contacts/app/views/samurai/contacts/contacts/edit.html.erb
+++ b/engines/contacts/app/views/samurai/contacts/contacts/edit.html.erb
@@ -1,12 +1,12 @@
 <!-- contacts/app/views/samurai/contacts/contacts/edit.html.erb -->
 <h2>Editing Contact</h2>
 <hr>
-<%= form_for([samurai, @contact]) do |f| %>
+<%= form_for([contacts, @contact]) do |f| %>
 <%= render 'form', f: f %>
 <div class="form-group">
 <div>
 <%= f.submit "Update Contact", class: "btn btn-primary" %>
-<%= link_to 'Back', samurai.contacts_path, class: 'btn btn-default' %>
+<%= link_to 'Back', contacts.contacts_path, class: 'btn btn-default' %>
 </div>
 </div>
 <% end %>
