--- a/engines/contacts/app/views/samurai/contacts/overrides/_contacts_link.html.erb
+++ b/engines/contacts/app/views/samurai/contacts/overrides/_contacts_link.html.erb
@@ -1,3 +1,3 @@
-<li class='<%= active(samurai.contacts_path) %>'>
-	<%= link_to 'Contacts', samurai.contacts_path %>
+<li class='<%= active(contacts.contacts_path) %>'>
+	<%= link_to 'Contacts', contacts.contacts_path %>
 </li>
