--- a/engines/tasks/app/views/samurai/tasks/tasks/index.html.erb
+++ b/engines/tasks/app/views/samurai/tasks/tasks/index.html.erb
@@ -1,4 +1,4 @@
-<%= link_to 'New Task', samurai.new_task_path,
+<%= link_to 'New Task', tasks.new_task_path,
 class: 'pull-right btn btn-primary' %>
 <h2>Listing Task</h2>
 <hr>
@@ -22,10 +22,10 @@ My Tasks
 <td><%= task.content %></td>
 <td><%= task.created_at.strftime("%d %b. %Y") %></td>
 <td>
-<%= link_to 'Show', [samurai, task], class: 'btn btn-primary' %>
-<%= link_to 'Edit', samurai.edit_task_path(task),
+<%= link_to 'Show', [tasks, task], class: 'btn btn-primary' %>
+<%= link_to 'Edit', tasks.edit_task_path(task),
 class: 'btn btn-primary' %>
-<%= link_to 'Destroy', [samurai, task],
+<%= link_to 'Destroy', [tasks, task],
 class: 'btn btn-primary' , method: :delete,
 data: { confirm: 'Are you sure?' } %>
 </td>
