--- a/engines/tasks/app/views/samurai/tasks/tasks/new.html.erb
+++ b/engines/tasks/app/views/samurai/tasks/tasks/new.html.erb
@@ -1,12 +1,12 @@
 <!-- SamuraiCRM/app/engines/tasks/app/views/samurai/tasks/tasks/new.html.erb -->
 <h2>New Task</h2>
 <hr>
-<%= form_for([samurai, @task]) do |f| %>
+<%= form_for([tasks, @task]) do |f| %>
 <%= render 'form', f: f %>
 <div class="form-group">
 <div>
 <%= f.submit "Create Task", class: "btn btn-primary" %>
-<%= link_to 'Back', samurai.tasks_path, class: 'btn btn-default' %>
+<%= link_to 'Back', tasks.tasks_path, class: 'btn btn-default' %>
 </div>
 </div>
 <% end %>
