--- a/engines/tasks/app/views/samurai/tasks/tasks/show.html.erb
+++ b/engines/tasks/app/views/samurai/tasks/tasks/show.html.erb
@@ -15,5 +15,5 @@
 </div>
 </div>
 <hr>
-<%= link_to 'Edit', samurai.edit_task_path(@task), class: "btn btn-primary" %>
-<%= link_to 'Back', samurai.tasks_path, class: 'btn btn-default' %>
+<%= link_to 'Edit', tasks.edit_task_path(@task), class: "btn btn-primary" %>
+<%= link_to 'Back', tasks.tasks_path, class: 'btn btn-default' %>
